test/MC/SVE/regression-tests/negative_tests/sve-st3d-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64E3Store8LSSZ
// Offset register Rm cannot be xzr
st3d {z9.d, z10.d, z11.d}, p2, [x26, xzr, lsl #3]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
